--- a/bower.json
+++ b/bower.json
@@ -18,5 +18,9 @@
     "bower_components",
     "test",
     "tests"
-  ]
+  ],
+  "dependencies": {
+    "jquery": "~2.1.4",
+    "semantic-ui": "~2.0.3"
+  }
 }
