added new ui components, modified the api controllers

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "bootpag": "^1.0.7",
     "jquery.mousewheel": "^3.1.9",
     "select2": "^4.0.0",
-    "summernote": "^0.6.10"
+    "summernote": "^0.6.10",
+    "sweetalert": "^1.0.1"
   }
 }
