--- a/.env.example
+++ b/.env.example
@@ -17,3 +17,7 @@ MAIL_PORT=2525
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
+
+SES_KEY=null
+SES_SECRET=null
+SES_REGION=us-east-1
