--- a/composer.json
+++ b/composer.json
@@ -12,10 +12,10 @@
     "laravel/framework": "5.1.*",
     "predis/predis": "^1.0",
     "prettus/l5-repository": "^2.1",
-    "phpoffice/phpexcel": "^1.8"
+    "phpoffice/phpexcel": "^1.8",
+    "aws/aws-sdk-php": "^3.4"
   },
   "require-dev": {
-    "barryvdh/laravel-debugbar": "^2.0",
     "fzaninotto/faker": "~1.4",
     "mockery/mockery": "0.9.*",
     "phpunit/phpunit": "~4.0",
