added user settings

--- a/.env.example
+++ b/.env.example
@@ -15,3 +15,6 @@ MAIL_DRIVER=ses
 MAIL_HOST=email-smtp.us-east-1.amazonaws.com
 MAIL_PORT=587
 MAIL_ENCRYPTION=tls
+SES_KEY=null
+SES_SECRET=null
+SES_REGION=null
