--- a/package.json
+++ b/package.json
@@ -29,8 +29,10 @@
     "bootpag": "^1.0.7",
     "chart.js": "^1.0.2",
     "jquery.mousewheel": "^3.1.9",
+    "magnific-popup": "^1.0.0",
     "select2": "^4.0.0",
     "summernote": "^0.6.10",
-    "sweetalert": "^1.0.1"
+    "sweetalert": "^1.0.1",
+    "underscore": "^1.8.3"
   }
 }
