new test cases for template service, changed the way the template is rendered

--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,9 @@
     "phpoffice/phpexcel": "^1.8",
     "aws/aws-sdk-php": "^3.4",
     "aws/aws-php-sns-message-validator": "^1.1",
-    "guzzlehttp/guzzle": "^6.1"
+    "guzzlehttp/guzzle": "^6.1",
+    "paquettg/php-html-parser": "^1.6",
+    "sunra/php-simple-html-dom-parser": "^1.5"
   },
   "require-dev": {
     "fzaninotto/faker": "~1.4",
