--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "private": true,
   "devDependencies": {
-    "bootstrap": "^3.3.5",
+    "babel-preset-es2015": "^6.3.13",
+    "babel-preset-react": "^6.3.13",
+    "babelify": "^7.2.0",
     "browserify": "^10.2.6",
     "del": "~1.1.1",
     "event-stream": "^3.3.1",
@@ -19,19 +21,18 @@
     "gulp-sourcemaps": "~1.5.1",
     "gulp-uglify": "~1.1.0",
     "gulp-util": "~3.0.4",
-    "jquery": "^2.1.4",
-    "react": "^0.13.3",
-    "reactify": "^1.1.1",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0"
   },
   "dependencies": {
     "bootpag": "^1.0.7",
+    "bootstrap": "^3.3.5",
     "chart.js": "^1.0.2",
+    "jquery": "^2.1.4",
     "jquery.mousewheel": "^3.1.9",
     "magnific-popup": "^1.0.0",
+    "react": "^0.13.3",
     "select2": "^4.0.0",
-    "summernote": "^0.6.10",
     "sweetalert": "^1.0.1",
     "underscore": "^1.8.3"
   }
