--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,6 @@ go:
   - 1.7
   - tip
 
-install:
-  - go get -d -v ./... && go build -v ./...
-  - go get github.com/stretchr/testify
+script:
+  - make deps gen
+  - make test
