--- a/web/package.json
+++ b/web/package.json
@@ -4,12 +4,14 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
+    "codemirror": "^5.45.0",
     "formik": "^1.5.2",
     "grommet": "^2.6.5",
     "grommet-icons": "^4.2.0",
     "history": "^4.9.0",
     "qs": "^6.7.0",
     "react": "^16.8.6",
+    "react-codemirror2": "^5.1.0",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
