--- a/web/package.json
+++ b/web/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "codemirror": "^5.45.0",
+    "date-fns": "^1.30.1",
     "formik": "^1.5.2",
     "grommet": "^2.6.5",
     "grommet-icons": "^4.2.0",
