added signup endpoint

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -39,6 +39,8 @@ services:
       - SKIP_TLS=true
       - LOG_LEVEL=info
       - DOMAIN_URL=https://example.com
+      - AUTH_SECRET=changeme #secret for signing JWTs
+      # - RECAPTCHA_SECRET=abcdef
   bulksender:
     image: news-maily/app
     command: /consumers/bulksender
