--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -40,6 +40,7 @@ services:
       - LOG_LEVEL=info
       - DOMAIN_URL=https://example.com
       - AUTH_SECRET=changeme #secret for signing JWTs
+      # - ENVIRONMENT=prod
       # - ENABLE_SIGNUP=true
       # - RECAPTCHA_SECRET=abcdef
   bulksender:
