--- a/web/package.json
+++ b/web/package.json
@@ -45,7 +45,7 @@
       "git add"
     ]
   },
-  "proxy": "http://localhost:8080",
+  "proxy": "http://192.168.99.100:8080",
   "devDependencies": {
     "husky": "^1.3.1",
     "lint-staged": "^8.1.5",
