added mysql port

--- a/.example.env
+++ b/.example.env
@@ -3,6 +3,7 @@ LOG_LEVEL=info
 PORT=8080
 DATABASE_DRIVER=mysql
 MYSQL_HOST=localhost
+MYSQL_PORT=3307
 MYSQL_USER=mailbadger
 MYSQL_PASS=changeme
 MYSQL_DATABASE=mailbadger
