--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -50,7 +50,7 @@
   "proxy": "http://localhost:8080",
   "devDependencies": {
     "husky": "^3.0.1",
-    "prettier": "1.18.2",
-    "lint-staged": "^9.2.1"
+    "lint-staged": "^9.2.1",
+    "prettier": "1.18.2"
   }
 }
