--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -14,6 +14,7 @@
     "query-string": "^6.8.2",
     "react": "^16.9.0",
     "react-codemirror2": "^6.0.0",
+    "react-css-loaders": "^0.0.5",
     "react-dom": "^16.9.0",
     "react-google-recaptcha": "^1.1.0",
     "react-router-dom": "^5.0.1",
@@ -50,7 +51,7 @@
   "proxy": "http://localhost:8080",
   "devDependencies": {
     "husky": "^3.0.3",
-    "prettier": "1.18.2",
-    "lint-staged": "^9.2.1"
+    "lint-staged": "^9.2.1",
+    "prettier": "1.18.2"
   }
 }
