--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -8,18 +8,26 @@ jobs:
     - uses: actions/checkout@master
     - name: Check styling error
       uses: "cedrickring/golang-action@1.3.0"
+      env:
+        GO111MODULE: "on"
       with:
         args: go get -u golang.org/x/lint/golint; go list ./... | grep -v /vendor/ | xargs -L1 golint -set_exit_status
     - name: Check missing error check
       uses: "cedrickring/golang-action@1.3.0"
+      env:
+        GO111MODULE: "on"
       with:
         args: go get -u github.com/kisielk/errcheck; ls -la; errcheck ./...
     - name: Check suspicious constructs (1)
       uses: "cedrickring/golang-action@1.3.0"
+      env:
+        GO111MODULE: "on"
       with:
         args: go get honnef.co/go/tools/cmd/staticcheck; staticcheck -checks all ./... # https://staticcheck.io/docs/checks
     - name: Check suspicious constructs (2)
       uses: "cedrickring/golang-action@1.3.0"
+      env:
+        GO111MODULE: "on"
       with:
         args: go vet ./...
   security:
@@ -29,6 +37,8 @@ jobs:
     - uses: actions/checkout@master
     - name: Check missing error check
       uses: "cedrickring/golang-action@1.3.0"
+      env:
+        GO111MODULE: "on"
       with:
         args: go get github.com/securego/gosec/cmd/gosec; gosec ./... # https://github.com/securego/gosec
   test:
@@ -38,6 +48,8 @@ jobs:
     - uses: actions/checkout@master
     - name: build
       uses: "cedrickring/golang-action@1.3.0"
+      env:
+        GO111MODULE: "on"
       with:
         args: go test ./...
   buildable:
@@ -47,5 +59,7 @@ jobs:
     - uses: actions/checkout@master
     - name: build
       uses: "cedrickring/golang-action@1.3.0"
+      env:
+        GO111MODULE: "on"
       with:
         args: go build .
