--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -6,12 +6,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@master
-    - name: Check styling error
-      uses: "cedrickring/golang-action@1.3.0"
-      env:
-        GO111MODULE: "on"
-      with:
-        args: go get -u golang.org/x/lint/golint; go list ./... | grep -v /vendor/ | xargs -L1 golint -set_exit_status
     - name: Check missing error check
       uses: "cedrickring/golang-action@1.3.0"
       env:
@@ -30,6 +24,12 @@ jobs:
         GO111MODULE: "on"
       with:
         args: go vet ./...
+    - name: Check styling error
+      uses: "cedrickring/golang-action@1.3.0"
+      env:
+        GO111MODULE: "on"
+      with:
+        args: go get -u golang.org/x/lint/golint; go list ./... | grep -v /vendor/ | xargs -L1 golint -set_exit_status
   security:
     name: Review security
     runs-on: ubuntu-latest
@@ -51,7 +51,7 @@ jobs:
       env:
         GO111MODULE: "on"
       with:
-        args: go test ./...
+        args: make gen && go test ./...
   buildable:
     name: Buildable
     runs-on: ubuntu-latest
@@ -62,4 +62,4 @@ jobs:
       env:
         GO111MODULE: "on"
       with:
-        args: go build .
+        args: make gen && go build .
