implemented logout endpoint, changes in auth context

--- a/.example.env
+++ b/.example.env
@@ -13,6 +13,7 @@ NSQLOOKUPD_HOST=nsqdlookupd
 NSQLOOKUPD_PORT=4161
 DOMAIN_URL=http://localhost:8080
 SKIP_TLS=true
+SECURE_COOKIE=false
 AUTH_SECRET=changeme
 EMAILS_TOKEN_SECRET=changeme
 SESSION_AUTH_KEY=secret
