--- a/.example.env
+++ b/.example.env
@@ -11,7 +11,7 @@ NSQD_HOST=nsqd
 NSQD_PORT=4150
 NSQLOOKUPD_HOST=nsqdlookupd
 NSQLOOKUPD_PORT=4161
-DOMAIN_URL=http://localhost:8080
+APP_URL=http://localhost:3000
 SKIP_TLS=true
 SECURE_COOKIE=false
 EMAILS_TOKEN_SECRET=changeme
