--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -11,19 +11,19 @@ jobs:
       env:
         GO111MODULE: "on"
       with:
-        args: go get -u github.com/kisielk/errcheck; ls -la; errcheck ./...
+        args: make gen && go get -u github.com/kisielk/errcheck; ls -la; errcheck ./...
     - name: Check suspicious constructs (1)
       uses: "cedrickring/golang-action@1.3.0"
       env:
         GO111MODULE: "on"
       with:
-        args: go get honnef.co/go/tools/cmd/staticcheck; staticcheck -checks all ./... # https://staticcheck.io/docs/checks
+        args: make gen && go get honnef.co/go/tools/cmd/staticcheck; staticcheck -checks all ./... # https://staticcheck.io/docs/checks
     - name: Check suspicious constructs (2)
       uses: "cedrickring/golang-action@1.3.0"
       env:
         GO111MODULE: "on"
       with:
-        args: go vet ./...
+        args: make gen && go vet ./...
     - name: Check styling error
       uses: "cedrickring/golang-action@1.3.0"
       env:
@@ -40,7 +40,7 @@ jobs:
       env:
         GO111MODULE: "on"
       with:
-        args: go get github.com/securego/gosec/cmd/gosec; gosec ./... # https://github.com/securego/gosec
+        args: go get github.com/securego/gosec/cmd/gosec; make gen && gosec ./... # https://github.com/securego/gosec
   test:
     name: Testable
     runs-on: ubuntu-latest
