--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -12,13 +12,13 @@ jobs:
         GO111MODULE: "on"
       with:
         args: make gen && go get -u github.com/kisielk/errcheck; ls -la; errcheck ./...
-    - name: Check suspicious constructs (1)
+    - name: Run staticcheck
       uses: "cedrickring/golang-action@1.3.0"
       env:
         GO111MODULE: "on"
       with:
-        args: make gen && go get honnef.co/go/tools/cmd/staticcheck; staticcheck -checks all ./... # https://staticcheck.io/docs/checks
-    - name: Check suspicious constructs (2)
+        args: go get honnef.co/go/tools/cmd/staticcheck; staticcheck ./... # https://staticcheck.io/docs/checks
+    - name: Run go vet
       uses: "cedrickring/golang-action@1.3.0"
       env:
         GO111MODULE: "on"
@@ -35,7 +35,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@master
-    - name: Check missing error check
+    - name: Run gosec
       uses: "cedrickring/golang-action@1.3.0"
       env:
         GO111MODULE: "on"
