--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -40,12 +40,18 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@master
-    - name: build
+    - name: test
       uses: "cedrickring/golang-action@1.5.2"
       env:
         GO111MODULE: "on"
       with:
-        args: make gen && go test ./...
+        args: make gen && go test -coverprofile=coverage.out ./...
+    - name: Upload coverage to Codecov  
+      uses: codecov/codecov-action@v1
+      with:
+        file: ./coverage.out
+        name: codecov-umbrella
+        fail_ci_if_error: true
   buildable:
     name: Buildable
     runs-on: ubuntu-latest
