chore: switched logrus with the new context logger

--- a/.example.env
+++ b/.example.env
@@ -21,6 +21,7 @@ SECURE_COOKIE=false
 EMAILS_TOKEN_SECRET=changeme
 SESSION_AUTH_KEY=secret
 SESSION_ENCRYPT_KEY=secretexmplkeythatis32characters
+UNSUBSCRIBE_SECRET=secretexmplkeythatis32characters
 SYSTEM_EMAIL_SOURCE=noreply@example.dev
 ENABLE_SIGNUP=true
 RECAPTCHA_SECRET=
