--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -36,36 +36,32 @@ services:
     ports:
       - "4171:4171"
 
-  # app:
-  #   image: news-maily/app
-  #   command: /app
-  #   ports:
-  #     - "8080:8080"
-  #   volumes:
-  #     - ./maily.db:/maily.db
-  #   depends_on:
-  #     - mysql
-  #     - nsqd
-  #   env_file: 
-  #   - .env.docker
-  # bulksender:
-  #   image: news-maily/app
-  #   command: /consumers/bulksender
-  #   volumes:
-  #     - ./maily.db:/maily.db
-  #   depends_on:
-  #     - app
-  #   env_file: 
-  #   - .env.docker
-  # campaigner:
-  #   image: news-maily/app
-  #   command: /consumers/campaigner
-  #   volumes:
-  #     - ./maily.db:/maily.db
-  #   depends_on:
-  #     - app
-  #   env_file: 
-  #   - .env.docker
+  app:
+    image: news-maily/app
+    command: /app
+    ports:
+      - "8080:8080"
+    depends_on:
+      - mysql
+      - nsqd
+    env_file: 
+    - .env.docker
+
+  bulksender:
+    image: news-maily/app
+    command: /consumers/bulksender
+    depends_on:
+      - app
+    env_file: 
+    - .env.docker
+
+  campaigner:
+    image: news-maily/app
+    command: /consumers/campaigner
+    depends_on:
+      - app
+    env_file: 
+    - .env.docker
 
 volumes:
   dbdata:
