--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -44,8 +44,7 @@
   },
   "lint-staged": {
     "*.{js,json,css,md}": [
-      "prettier --write",
-      "git add"
+      "prettier --write"
     ]
   },
   "proxy": "http://localhost:8080",
