--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -37,7 +37,7 @@ services:
       - "4171:4171"
 
   app:
-    image: news-maily/app
+    image: mailbadger/app
     command: /app
     ports:
       - "8080:8080"
@@ -48,7 +48,7 @@ services:
     - .env.docker
 
   bulksender:
-    image: news-maily/app
+    image: mailbadger/app
     command: /consumers/bulksender
     depends_on:
       - app
@@ -56,7 +56,7 @@ services:
     - .env.docker
 
   campaigner:
-    image: news-maily/app
+    image: mailbadger/app
     command: /consumers/campaigner
     depends_on:
       - app
