--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@uppy/aws-s3": "^1.6.4",
     "@uppy/core": "^1.10.4",
     "@uppy/react": "^1.6.5",
     "axios": "^0.19.2",
