--- a/.example.env
+++ b/.example.env
@@ -32,6 +32,7 @@ AWS_SES_REGION=eu-west-1
 AWS_S3_ACCESS_KEY=AKIAIOSFODNN7EXAMPLE
 AWS_S3_SECRET_KEY=wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY
 AWS_S3_REGION=eu-west-1
+AWS_S3_BUCKET=files-bucket
 
 GITHUB_CLIENT_ID=exampleid
 GITHUB_CLIENT_SECRET=examplesecret
