--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -20,6 +20,7 @@
     "react-codemirror2": "^7.1.0",
     "react-content-loader": "^5.0.4",
     "react-dom": "^16.13.1",
+    "react-error-boundary": "^2.2.1",
     "react-google-recaptcha": "^2.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
@@ -54,7 +55,7 @@
   },
   "proxy": "http://localhost:8080",
   "devDependencies": {
-    "eslint": "^7.0.0",
+    "eslint": "^6.6.0",
     "eslint-plugin-react": "^7.20.0",
     "husky": "^4.2.5",
     "lint-staged": "^10.2.2",
