new mysql config file to remove secure-file-priv flag

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -13,7 +13,7 @@ services:
       - MYSQL_DATABASE=mailbadger
     volumes:
       - dbdata:/var/lib/mysql
-
+      - ./my.cnf:/etc/mysql/conf.d/my.cnf
   nsqlookupd:
     image: nsqio/nsq
     command: /nsqlookupd
