--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -25,6 +25,7 @@
     "react-google-recaptcha": "^2.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
+    "recharts": "^1.8.5",
     "styled-components": "^4.4.1",
     "whatwg-fetch": "^3.4.1",
     "yup": "^0.29.3"
