--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -11,7 +11,7 @@ jobs:
       env:
         GO111MODULE: "on"
       with:
-        args: go get honnef.co/go/tools/cmd/staticcheck; staticcheck ./... # https://staticcheck.io/docs/checks
+        args: make gen && go get honnef.co/go/tools/cmd/staticcheck; staticcheck ./... # https://staticcheck.io/docs/checks
     - name: Run go vet
       uses: "cedrickring/golang-action@1.5.2"
       env:
