--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -1,41 +1,32 @@
 name: Go
-on: [push]
+on:
+  push:
+    tags:
+      - v*
+    branches:
+      - master
+      - main
+  pull_request:
 jobs:
-  review:
-    name: Review code
+  golangci:
+    name: Review
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@master
-    - name: Run staticcheck
-      uses: "cedrickring/golang-action@1.5.2"
-      env:
-        GO111MODULE: "on"
-      with:
-        args: make gen && go get honnef.co/go/tools/cmd/staticcheck; staticcheck ./... # https://staticcheck.io/docs/checks
-    - name: Run go vet
-      uses: "cedrickring/golang-action@1.5.2"
-      env:
-        GO111MODULE: "on"
-      with:
-        args: make gen && go vet ./...
-  security:
-    name: Review security
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@master
-    - name: Run gosec
-      uses: "cedrickring/golang-action@1.5.2"
-      env:
-        GO111MODULE: "on"
-      with:
-        args: go get github.com/securego/gosec/cmd/gosec; make gen && gosec -exclude-dir=storage/migrations ./... # https://github.com/securego/gosec
+      - uses: actions/checkout@master
+      - name: Generate migration files
+        run: make gen
+      - name: golangci-lint
+        uses: golangci/golangci-lint-action@v2
+        with:
+          version: v1.29
+          args: --enable=gosec
   test:
-    name: Testable
+    name: Test
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@master
     - name: test
-      uses: "cedrickring/golang-action@1.5.2"
+      uses: cedrickring/golang-action@1.6.0
       env:
         GO111MODULE: "on"
       with:
@@ -47,12 +38,12 @@ jobs:
         name: codecov-umbrella
         fail_ci_if_error: true
   buildable:
-    name: Buildable
+    name: Build
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@master
     - name: build
-      uses: "cedrickring/golang-action@1.5.2"
+      uses: cedrickring/golang-action@1.6.0
       env:
         GO111MODULE: "on"
       with:
