--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -19,6 +19,8 @@ jobs:
           args: make gen
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v2
+        env:
+          GO111MODULE: "on"
         with:
           version: v1.29
           args: --enable=gosec
