--- a/.example.env
+++ b/.example.env
@@ -41,3 +41,7 @@ GOOGLE_CLIENT_ID=exampleid
 GOOGLE_CLIENT_SECRET=examplesecret
 FACEBOOK_CLIENT_ID=exampleid
 FACEBOOK_CLIENT_SECRET=examplesecret
+
+REDIS_HOST=redis
+REDIS_PORT=6379
+REDIS_PASS=secret
