Quick fixes while testing
Add info logs in consumers
Select metadata in GetDistinctSubscribersBySegmentIDs
Run new sender in run script
Fix the composer
Add name and unsubscribe_url in template metadata

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -18,11 +18,11 @@ services:
     image: nsqio/nsq
     command: /nsqlookupd
     ports:
-      - "4160"
-      - "4161"
+      - "4160:4160"
+      - "4161:4161"
   nsqd:
     image: nsqio/nsq
-    command: /nsqd --lookupd-tcp-address=nsqlookupd:4160
+    command: /nsqd --broadcast-address=nsqd --lookupd-tcp-address=nsqlookupd:4160
     depends_on:
       - nsqlookupd
     ports:
