--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Generate migration files
         uses: cedrickring/golang-action@1.6.0
         with:
-          args: make gen
+          args: go get github.com/rakyll/statik && make gen
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v2
         env:
@@ -34,7 +34,7 @@ jobs:
       env:
         GO111MODULE: "on"
       with:
-        args: make gen && go test -coverprofile=coverage.out ./...
+        args: go get github.com/rakyll/statik && make gen && go test -coverprofile=coverage.out ./...
     - name: Upload coverage to Codecov  
       uses: codecov/codecov-action@v1
       with:
@@ -51,4 +51,4 @@ jobs:
       env:
         GO111MODULE: "on"
       with:
-        args: make gen && go build .
+        args: go get github.com/rakyll/statik && make gen && go build .
