--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -42,7 +42,19 @@ services:
     volumes:
       - ./config/redis.conf:/redis.conf
     command: [ "redis-server", "/redis.conf" ]
-
+  opa:
+    image: openpolicyagent/opa:latest
+    ports:
+      - "8181"
+    # WARNING: OPA is NOT running with an authorization policy configured. This
+    # means that clients can read and write policies in OPA. If you are
+    # deploying OPA in an insecure environment, be sure to configure
+    # authentication and authorization on the daemon. See the Security page for
+    # details: https://www.openpolicyagent.org/docs/security.html.
+    command:
+      - "run"
+      - "--server"
+      - "--log-level=debug"
   # app:
   #   image: mailbadger/app
   #   command: /app
