--- a/.example.env
+++ b/.example.env
@@ -45,3 +45,6 @@ FACEBOOK_CLIENT_SECRET=examplesecret
 REDIS_HOST=redis
 REDIS_PORT=6379
 REDIS_PASS=secret
+
+OPA_ADDR=http://localhost:8181
+OPA_POlICY_PATH=/v1/data/rbac/authz
