--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -13,7 +13,7 @@ services:
       - MYSQL_DATABASE=mailbadger
     volumes:
       - dbdata:/var/lib/mysql
-      - ./my.cnf:/etc/mysql/conf.d/my.cnf
+      - ./config/my.cnf:/etc/mysql/conf.d/my.cnf
   nsqlookupd:
     image: nsqio/nsq
     command: /nsqlookupd
@@ -55,6 +55,9 @@ services:
       - "run"
       - "--server"
       - "--log-level=debug"
+      - "rbac_authz.rego"
+    volumes:
+      - ./opa/rbac_authz.rego:/rbac_authz.rego
   # app:
   #   image: mailbadger/app
   #   command: /app
