fix: add boundaries on user signup, cleanup send verify email

--- a/.example.env
+++ b/.example.env
@@ -23,6 +23,7 @@ SESSION_ENCRYPT_KEY=secretexmplkeythatis32characters
 UNSUBSCRIBE_SECRET=secretexmplkeythatis32characters
 SYSTEM_EMAIL_SOURCE=noreply@example.dev
 ENABLE_SIGNUP=true
+VERIFY_EMAIL_ON_SIGNUP=true
 RECAPTCHA_SECRET=
 
 AWS_SES_ACCESS_KEY=AKIAIOSFODNN7EXAMPLE
