--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,4 +1,4 @@
-version: '3'
+version: "3"
 
 services:
   mysql:
@@ -41,7 +41,7 @@ services:
       - 6379:6379
     volumes:
       - ./config/redis.conf:/redis.conf
-    command: [ "redis-server", "/redis.conf" ]
+    command: ["redis-server", "/redis.conf"]
   # app:
   #   image: mailbadger/app
   #   command: /app
@@ -50,7 +50,7 @@ services:
   #   depends_on:
   #     - mysql
   #     - nsqd
-  #   env_file: 
+  #   env_file:
   #   - .env.docker
 
   # bulksender:
@@ -58,7 +58,7 @@ services:
   #   command: /consumers/bulksender
   #   depends_on:
   #     - app
-  #   env_file: 
+  #   env_file:
   #   - .env.docker
 
   # campaigner:
@@ -66,7 +66,7 @@ services:
   #   command: /consumers/campaigner
   #   depends_on:
   #     - app
-  #   env_file: 
+  #   env_file:
   #   - .env.docker
 
 volumes:
