--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -3,9 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@uppy/react": "^1.11.6",
+    "@fortawesome/fontawesome-svg-core": "^1.2.35",
+    "@fortawesome/free-brands-svg-icons": "^5.15.3",
+    "@fortawesome/free-regular-svg-icons": "^5.15.3",
+    "@fortawesome/free-solid-svg-icons": "^5.15.3",
+    "@fortawesome/react-fontawesome": "^0.1.14",
     "@uppy/aws-s3": "^1.7.9",
     "@uppy/core": "^1.17.0",
+    "@uppy/react": "^1.11.6",
     "axios": "^0.21.1",
     "codemirror": "^5.61.0",
     "date-fns": "^2.21.3",
