--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,14 +19,24 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
-      - name: Docker meta
-        id: meta
+      - name: Docker app meta
+        id: meta-app
         uses: docker/metadata-action@v3
         with:
           images: 933237757710.dkr.ecr.eu-west-1.amazonaws.com/app
 
+      - name: Docker reverseproxy meta
+        id: meta-reverseproxy
+        uses: docker/metadata-action@v3
+        with:
+          images: 933237757710.dkr.ecr.eu-west-1.amazonaws.com/nginx
+
       - name: Set up Docker Buildx
-        id: buildx
+        id: build-app
+        uses: docker/setup-buildx-action@v1
+
+      - name: Set up Docker Buildx
+        id: build-reverseproxy
         uses: docker/setup-buildx-action@v1
 
       - name: Cache Docker layers
@@ -50,13 +60,26 @@ jobs:
         if: github.event_name != 'pull_request'
         uses: aws-actions/amazon-ecr-login@v1
 
-      - name: Build and push
-        id: docker_build
+      - name: Build and push app
+        id: docker_build_app
         uses: docker/build-push-action@v2
         with:
           context: .
+          builder: ${{ steps.build-app.outputs.name }}
           push: ${{ github.event_name != 'pull_request' }}
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
+          tags: ${{ steps.meta-app.outputs.tags }}
+          labels: ${{ steps.meta-app.outputs.labels }}
+          cache-from: type=local,src=/tmp/.buildx-cache
+          cache-to: type=local,dest=/tmp/.buildx-cache
+
+      - name: Build and push reverseproxy
+        id: docker_build_reverseproxy
+        uses: docker/build-push-action@v2
+        with:
+          context: ./reverseproxy
+          builder: ${{ steps.build-reverseproxy.outputs.name }}
+          push: ${{ github.event_name != 'pull_request' }}
+          tags: ${{ steps.meta-reverseproxy.outputs.tags }}
+          labels: ${{ steps.meta-reverseproxy.outputs.labels }}
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache
