--- a/.example.env
+++ b/.example.env
@@ -8,10 +8,9 @@ MYSQL_USER=mailbadger
 MYSQL_PASS=changeme
 MYSQL_DATABASE=mailbadger
 
-NSQD_HOST=nsqd
-NSQD_PORT=4150
-NSQLOOKUPD_HOST=nsqdlookupd
-NSQLOOKUPD_PORT=4161
+REDIS_HOST=redis
+REDIS_PORT=6379
+REDIS_PASS=secret
 
 PORT=8080
 APP_DIR=/www/app
@@ -26,13 +25,10 @@ ENABLE_SIGNUP=true
 VERIFY_EMAIL_ON_SIGNUP=true
 RECAPTCHA_SECRET=
 
-AWS_SES_ACCESS_KEY=AKIAIOSFODNN7EXAMPLE
-AWS_SES_SECRET_KEY=wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY
-AWS_SES_REGION=eu-west-1
+AWS_ACCESS_KEY_ID=AKIAIOSFODNN7EXAMPLE
+AWS_SECRET_ACCESS_KEY=wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY
+AWS_REGION=eu-west-1
 
-AWS_S3_ACCESS_KEY=AKIAIOSFODNN7EXAMPLE
-AWS_S3_SECRET_KEY=wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY
-AWS_S3_REGION=eu-west-1
 FILES_BUCKET=files-bucket
 TEMPLATES_BUCKET=files-bucket
 
@@ -42,7 +38,3 @@ GOOGLE_CLIENT_ID=exampleid
 GOOGLE_CLIENT_SECRET=examplesecret
 FACEBOOK_CLIENT_ID=exampleid
 FACEBOOK_CLIENT_SECRET=examplesecret
-
-REDIS_HOST=redis
-REDIS_PORT=6379
-REDIS_PASS=secret
