--- a/.example.env
+++ b/.example.env
@@ -1,40 +1,40 @@
-ENVIRONMENT=dev
-LOG_LEVEL=info
+MB_APP_MODE=dev
+MB_APP_LOG_LEVEL=info
+MB_APP_LOG_PRETTY=false
 
-DATABASE_DRIVER=mysql
-MYSQL_HOST=localhost
-MYSQL_PORT=3307
-MYSQL_USER=mailbadger
-MYSQL_PASS=changeme
-MYSQL_DATABASE=mailbadger
+MB_APP_DATABASE_DRIVER=mysql
+MB_APP_MYSQL_HOST=localhost
+MB_APP_MYSQL_PORT=3307
+MB_APP_MYSQL_USER=mailbadger
+MB_APP_MYSQL_PASS=changeme
+MB_APP_MYSQL_DATABASE=mailbadger
 
-REDIS_HOST=redis
-REDIS_PORT=6379
-REDIS_PASS=secret
+MB_APP_REDIS_HOST=redis
+MB_APP_REDIS_PORT=6379
+MB_APP_REDIS_PASS=secret
 
-PORT=8080
-APP_DIR=/www/app
-APP_URL=http://localhost:8080
-SKIP_TLS=true
-SECURE_COOKIE=false
-SESSION_AUTH_KEY=secret
-SESSION_ENCRYPT_KEY=secretexmplkeythatis32characters
-UNSUBSCRIBE_SECRET=secretexmplkeythatis32characters
-SYSTEM_EMAIL_SOURCE=noreply@example.dev
-ENABLE_SIGNUP=true
-VERIFY_EMAIL_ON_SIGNUP=true
-RECAPTCHA_SECRET=
+MB_APP_PORT=8080
+MB_APP_DIR=/www/app
+MB_APP_URL=http://localhost:8080
+MB_APP_SECURE_COOKIE=false
+MB_APP_SESSION_AUTH_KEY=secret
+MB_APP_SESSION_ENCRYPT_KEY=secretexmplkeythatis32characters
+MB_APP_UNSUBSCRIBE_SECRET=secretexmplkeythatis32characters
+MB_APP_SYSTEM_EMAIL_SOURCE=noreply@example.dev
+MB_APP_ENABLE_SIGNUP=true
+MB_APP_VERIFY_EMAIL_ON_SIGNUP=true
+MB_APP_RECAPTCHA_SECRET=
 
 AWS_ACCESS_KEY_ID=AKIAIOSFODNN7EXAMPLE
 AWS_SECRET_ACCESS_KEY=wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY
 AWS_REGION=eu-west-1
 
-FILES_BUCKET=files-bucket
-TEMPLATES_BUCKET=files-bucket
+MB_APP_FILES_BUCKET=files-bucket
+MB_APP_TEMPLATES_BUCKET=files-bucket
 
-GITHUB_CLIENT_ID=exampleid
-GITHUB_CLIENT_SECRET=examplesecret
-GOOGLE_CLIENT_ID=exampleid
-GOOGLE_CLIENT_SECRET=examplesecret
-FACEBOOK_CLIENT_ID=exampleid
-FACEBOOK_CLIENT_SECRET=examplesecret
+MB_APP_GITHUB_CLIENT_ID=exampleid
+MB_APP_GITHUB_CLIENT_SECRET=examplesecret
+MB_APP_GOOGLE_CLIENT_ID=exampleid
+MB_APP_GOOGLE_CLIENT_SECRET=examplesecret
+MB_APP_FACEBOOK_CLIENT_ID=exampleid
+MB_APP_FACEBOOK_CLIENT_SECRET=examplesecret
