--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -14,13 +14,10 @@ jobs:
     steps:
       - uses: actions/checkout@master
       - name: Generate migration files
-        uses: cedrickring/golang-action@1.7.0
-        with:
-          args: go get github.com/rakyll/statik && make gen
+        uses: actions/setup-go@v2
+        run: go get github.com/rakyll/statik && make gen
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v2
-        env:
-          GO111MODULE: "on"
         with:
           version: v1.41
           args: --enable=gosec --timeout=5m
@@ -30,11 +27,8 @@ jobs:
     steps:
       - uses: actions/checkout@master
       - name: test
-        uses: cedrickring/golang-action@1.7.0
-        env:
-          GO111MODULE: "on"
-        with:
-          args: go get github.com/rakyll/statik && make gen && go test -coverprofile=coverage.out ./...
+        uses: actions/setup-go@v2
+        run: go get github.com/rakyll/statik && make gen && go test -coverprofile=coverage.out ./...
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v1
         with:
@@ -47,8 +41,5 @@ jobs:
     steps:
       - uses: actions/checkout@master
       - name: build
-        uses: cedrickring/golang-action@1.7.0
-        env:
-          GO111MODULE: "on"
-        with:
-          args: go get github.com/rakyll/statik && make gen && go build ./...
+        uses: actions/setup-go@v2 
+        run: go get github.com/rakyll/statik && make gen && go build ./...
