--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -15,7 +15,7 @@ jobs:
       - uses: actions/checkout@master
       - name: Generate migration files
         uses: actions/setup-go@v2
-        run: go get github.com/rakyll/statik && make gen
+      - run: go get github.com/rakyll/statik && make gen
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v2
         with:
@@ -28,7 +28,7 @@ jobs:
       - uses: actions/checkout@master
       - name: test
         uses: actions/setup-go@v2
-        run: go get github.com/rakyll/statik && make gen && go test -coverprofile=coverage.out ./...
+      - run: go get github.com/rakyll/statik && make gen && go test -coverprofile=coverage.out ./...
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v1
         with:
@@ -42,4 +42,4 @@ jobs:
       - uses: actions/checkout@master
       - name: build
         uses: actions/setup-go@v2 
-        run: go get github.com/rakyll/statik && make gen && go build ./...
+      - run: go get github.com/rakyll/statik && make gen && go build ./...
