--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -40,7 +40,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "prettier": "prettier "
+    "prettier": "prettier --config ../.prettierrc --write '**/**.{ts,tsx,js,jsx,html,css,less}'"
   },
   "eslintConfig": {
     "extends": "react-app"
