--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -39,7 +39,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "prettier": "prettier --config ../.prettierrc --write '**/**.{ts,tsx,js,jsx,html,css,less}'"
   },
   "eslintConfig": {
     "extends": "react-app"
