wip(1584): Subscribers refactored, created generic hook for data tables and changed approach how data is handled in tables

--- a/dashboard/.eslintrc.json
+++ b/dashboard/.eslintrc.json
@@ -18,7 +18,8 @@
   },
   "plugins": ["react"],
   "rules": {
-    "react/state-in-constructor": [1, "always"]
+    "react/state-in-constructor": [1, "always"],
+    "react/prop-types": 0
   },
   "settings": {
     "react": {
